// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelGroup label group compact 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-label-group"
  >
    <div
      class="pf-v6-c-label-group__main"
    >
      <ul
        aria-label="Label group category"
        class="pf-v6-c-label-group__list"
        role="list"
      >
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled pf-m-compact"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                1
              </span>
            </span>
          </span>
        </li>
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled pf-m-compact"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                2
              </span>
            </span>
          </span>
        </li>
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled pf-m-compact"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                3
              </span>
            </span>
          </span>
        </li>
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <button
            class="pf-v6-c-label pf-m-overflow pf-m-compact"
            type="button"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                1 more
              </span>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LabelGroup label group default 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-label-group"
  >
    <div
      class="pf-v6-c-label-group__main"
    >
      <ul
        aria-label="Label group category"
        class="pf-v6-c-label-group__list"
        role="list"
      >
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                1.1
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LabelGroup label group with category 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-label-group pf-m-category"
  >
    <div
      class="pf-v6-c-label-group__main"
    >
      <span
        aria-hidden="true"
        class="pf-v6-c-label-group__label"
        id="generated-id"
      >
        category
      </span>
      <ul
        aria-labelledby="generated-id"
        class="pf-v6-c-label-group__list"
        role="list"
      >
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                1.1
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LabelGroup label group with category and tooltip 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-label-group pf-m-category"
  >
    <div
      class="pf-v6-c-label-group__main"
    >
      <span
        aria-hidden="true"
        class="pf-v6-c-label-group__label"
        id="generated-id"
      >
        A very long category name
      </span>
      <ul
        aria-labelledby="generated-id"
        class="pf-v6-c-label-group__list"
        role="list"
      >
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                1.1
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LabelGroup label group with closable category 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-label-group pf-m-category"
  >
    <div
      class="pf-v6-c-label-group__main"
    >
      <span
        aria-hidden="true"
        class="pf-v6-c-label-group__label"
        id="generated-id"
      >
        category
      </span>
      <ul
        aria-labelledby="generated-id"
        class="pf-v6-c-label-group__list"
        role="list"
      >
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                1.1
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
    <div
      class="pf-v6-c-label-group__close"
    >
      <button
        aria-label="Close label group"
        aria-labelledby="remove_group_generated-id generated-id"
        class="pf-v6-c-button pf-m-plain pf-m-small"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r0:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        id="remove_group_generated-id"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
